--- a/src/create-player.html
+++ b/src/create-player.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>Create New Player</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
     <h1>Create New Player</h1>
+    <p>Tarea: crear un fomulario que te permite crear un nuevo jugador.</p>
+    <p>Los campos son:</p>
+    <ul>
+      <li>name</li>
+      <li>age</li>
+    </ul>
+    <button type="button" class="btn btn-primary">Create</button>
     <script src="createPlayer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
