--- a/src/create-player.html
+++ b/src/create-player.html
@@ -13,7 +13,8 @@
       <li>name</li>
       <li>age</li>
     </ul>
-    <button type="button" class="btn btn-primary">Create</button>
+    <input type="number" id="age" />
+    <button type="button" id="create-button" class="btn btn-primary">Create</button>
     <script src="createPlayer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
